Email confirmation, lock, unlock account implemented

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,4 +6,7 @@ email.successful_activation.subject=Successful account activation
 email.successful_activation.content=Welcome to our users {0}! Your account has been successfully activated.
 
 email.lock.subject=Account lock
-email.lock.content=Hello {0}! Your account has been blocked.
+email.lock.content=Hello {0}! Your account has been locked.
+
+email.unlock.subject=Account unlock
+email.unlock.content=Hello {0}! Your account has been unlocked.
