--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -7,3 +7,6 @@ email.successful_activation.content=Witamy Ciê w gronie naszych u¿ytkowników {0}
 
 email.lock.subject=Blokada konta
 email.lock.content=Witaj {0}! Twoje konto zosta³o zablokowane.
+
+email.unlock.subject=Odblokowanie konta
+email.unlock.content=Witaj {0}! Twoje konto zosta³o odblokowane.
