Change and confirm email implemented

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,8 @@ email.lock.content=Hello {0}! Your account has been locked.
 
 email.unlock.subject=Account unlock
 email.unlock.content=Hello {0}! Your account has been unlocked.
+
+email.email_change.subject=Email address change
+email.email_change.content=Hello {0}! Please click the following link to change your email address: {1}.
+
+
