--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -10,3 +10,6 @@ email.lock.content=Witaj {0}! Twoje konto zosta³o zablokowane.
 
 email.unlock.subject=Odblokowanie konta
 email.unlock.content=Witaj {0}! Twoje konto zosta³o odblokowane.
+
+email.email_change.subject=Zmiana adresu email
+email.email_change.content=Witaj {0}! Kliknij w podany link, aby zmieniæ swój adres email: {1}.
