Change, reset, confirm password implemented

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -13,3 +13,6 @@ email.unlock.content=Witaj {0}! Twoje konto zosta³o odblokowane.
 
 email.email_change.subject=Zmiana adresu email
 email.email_change.content=Witaj {0}! Kliknij w podany link, aby zmieniæ swój adres email: {1}.
+
+email.password_reset.subject=Resetowanie has³a
+email.password_reset.content=Witaj {0}! Kliknij w podany link, aby zresetowaæ swoje has³o: {1}.
