--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,4 +14,7 @@ email.unlock.content=Hello {0}! Your account has been unlocked.
 email.email_change.subject=Email address change
 email.email_change.content=Hello {0}! Please click the following link to change your email address: {1}.
 
+email.password_reset.subject=Password reset
+email.password_reset.content=Hello {0}! Please click the following link to reset your password: {1}.
+
 
