Grant, revoke, switch access type implemented

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,4 +17,10 @@ email.email_change.content=Hello {0}! Please click the following link to change 
 email.password_reset.subject=Password reset
 email.password_reset.content=Hello {0}! Please click the following link to reset your password: {1}.
 
+email.access_grant.subject=Access granted
+email.access_grant.content=Hello {0}! The following access type has been granted to your account: {1}.
+
+email.access_revoke.subject=Access revoked
+email.access_revoke.content=Hello {0}! The following access type has been revoked from your account: {1}.
+
 
