--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -14,5 +14,8 @@ email.unlock.content=Witaj {0}! Twoje konto zosta³o odblokowane.
 email.email_change.subject=Zmiana adresu email
 email.email_change.content=Witaj {0}! Kliknij w podany link, aby zmieniæ swój adres email: {1}.
 
-email.password_reset.subject=Resetowanie has³a
-email.password_reset.content=Witaj {0}! Kliknij w podany link, aby zresetowaæ swoje has³o: {1}.
+email.access_grant.subject=Przyznanie poziomu dostêpu
+email.access_grant.content=Witaj {0}! Przyznano Ci nastêpuj¹cy poziom dostêpu: {1}.
+
+email.access_revoke.subject=Odebranie poziomu dostêpu
+email.access_revoke.content=Witaj {0}! Odebrano Ci nastêpuj¹cy poziom dostêpu: {1}.
