--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,9 @@ email.activation.content=Hello {0}! To complete your registration, please click 
 email.successful_activation.subject=Successful account activation
 email.successful_activation.content=Welcome to our users {0}! Your account has been successfully activated.
 
+email.account_delete.subject=Account delete
+email.account_delete.content=Hello {0}! Your account has been deleted because you did not confirm your email address within 24 hours of registration.
+
 email.lock.subject=Account lock
 email.lock.content=Hello {0}! Your account has been locked.
 
