--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -5,6 +5,9 @@ email.activation.content=Witaj {0}! W celu ukoñczenia rejestracji kliknij w poda
 email.successful_activation.subject=Pomyœlna aktywacja konta
 email.successful_activation.content=Witamy Ciê w gronie naszych u¿ytkowników {0}! Twoje konto zosta³o pomyœlnie aktywowane.
 
+email.account_delete.subject=Usuniêcie konta
+email.account_delete.content=Witaj {0}! Twoje konto zosta³o usuniête, poniewa¿ nie potwierdzi³eœ adresu email w przeci¹gu 24h od rejestracji.
+
 email.lock.subject=Blokada konta
 email.lock.content=Witaj {0}! Twoje konto zosta³o zablokowane.
 
