--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,24 +1,27 @@
 #email
 email.activation.subject=Potwierdzenie adresu email
-email.activation.content=Witaj {0}! W celu ukoñczenia rejestracji kliknij w podany link, aby zweryfikowaæ swój adres email: {1}.
+email.activation.content=Witaj {0}! W celu ukoÅ„czenia rejestracji kliknij w podany link, aby zweryfikowaÄ‡ swÃ³j adres email: {1}.
 
-email.successful_activation.subject=Pomyœlna aktywacja konta
-email.successful_activation.content=Witamy Ciê w gronie naszych u¿ytkowników {0}! Twoje konto zosta³o pomyœlnie aktywowane.
+email.successful_activation.subject=PomyÅ›lna aktywacja konta
+email.successful_activation.content=Witamy CiÄ™ w gronie naszych uÅ¼ytkownikÃ³w {0}! Twoje konto zostaÅ‚o pomyÅ›lnie aktywowane.
 
-email.account_delete.subject=Usuniêcie konta
-email.account_delete.content=Witaj {0}! Twoje konto zosta³o usuniête, poniewa¿ nie potwierdzi³eœ adresu email w przeci¹gu 24h od rejestracji.
+email.account_delete.subject=UsuniÄ™cie konta
+email.account_delete.content=Witaj {0}! Twoje konto zostaÅ‚o usuniÄ™te, poniewaÅ¼ nie potwierdziÅ‚eÅ› adresu email w przeciÄ…gu 24h od rejestracji.
 
 email.lock.subject=Blokada konta
-email.lock.content=Witaj {0}! Twoje konto zosta³o zablokowane.
+email.lock.content=Witaj {0}! Twoje konto zostaÅ‚o zablokowane.
 
 email.unlock.subject=Odblokowanie konta
-email.unlock.content=Witaj {0}! Twoje konto zosta³o odblokowane.
+email.unlock.content=Witaj {0}! Twoje konto zostaÅ‚o odblokowane.
 
 email.email_change.subject=Zmiana adresu email
-email.email_change.content=Witaj {0}! Kliknij w podany link, aby zmieniæ swój adres email: {1}.
+email.email_change.content=Witaj {0}! Kliknij w podany link, aby zmieniÄ‡ swÃ³j adres email: {1}.
 
-email.access_grant.subject=Przyznanie poziomu dostêpu
-email.access_grant.content=Witaj {0}! Przyznano Ci nastêpuj¹cy poziom dostêpu: {1}.
+email.password_reset.subject=Resetowanie hasÅ‚a
+email.password_reset.content=Witaj {0}! Kliknij w podany link, aby zresetowaÄ‡ swoje hasÅ‚o: {1}.
 
-email.access_revoke.subject=Odebranie poziomu dostêpu
-email.access_revoke.content=Witaj {0}! Odebrano Ci nastêpuj¹cy poziom dostêpu: {1}.
+email.access_grant.subject=Przyznanie poziomu dostÄ™pu
+email.access_grant.content=Witaj {0}! Przyznano Ci nastÄ™pujÄ…cy poziom dostÄ™pu: {1}.
+
+email.access_revoke.subject=Odebranie poziomu dostÄ™pu
+email.access_revoke.content=Witaj {0}! Odebrano Ci nastÄ™pujÄ…cy poziom dostÄ™pu: {1}.
