--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,4 +26,10 @@ email.access_grant.content=Hello {0}! The following access type has been granted
 email.access_revoke.subject=Access revoked
 email.access_revoke.content=Hello {0}! The following access type has been revoked from your account: {1}.
 
+email.payment_confirm.subject=Payment confirmation
+email.payment_confirm.content=Hello {0}! Your payment of {1} zł has been confirmed.
+
+email.course_paid.subject=Course paid
+email.course_paid.content=Hello {0}! Once your payment of {1} zł has been approved, your course has been fully paid for.
+
 
