--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -25,3 +25,9 @@ email.access_grant.content=Witaj {0}! Przyznano Ci następujący poziom dostępu
 
 email.access_revoke.subject=Odebranie poziomu dostępu
 email.access_revoke.content=Witaj {0}! Odebrano Ci następujący poziom dostępu: {1}.
+
+email.payment_confirm.subject=Potwierdzenie płatności
+email.payment_confirm.content=Witaj {0}! Twoja płatność w wysokości {1} zł została potwierdzona.
+
+email.course_paid.subject=Opłacenie kursu
+email.course_paid.content=Witaj {0}! Po zatwierdzeniu płatności w wysokości {1} zł Twój kurs został w pełni opłacony.
