--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,4 +32,6 @@ email.payment_confirm.content=Hello {0}! Your payment of {1} zł has been confir
 email.course_paid.subject=Course paid
 email.course_paid.content=Hello {0}! Once your payment of {1} zł has been approved, your course has been fully paid for.
 
+email.payment_reject.subject=Payment rejection
+email.payment_reject.content=Hello {0}! Your payment of {1} zł has been rejected.
 
