--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -31,3 +31,6 @@ email.payment_confirm.content=Witaj {0}! Twoja płatność w wysokości {1} zł 
 
 email.course_paid.subject=Opłacenie kursu
 email.course_paid.content=Witaj {0}! Po zatwierdzeniu płatności w wysokości {1} zł Twój kurs został w pełni opłacony.
+
+email.payment_reject.subject=Odrzucenie płatności
+email.payment_reject.content=Witaj {0}! Twoja płatność w wysokości {1} zł została odrzucona.
