Changes after testing implemented endpoints

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,8 +30,12 @@ email.payment_confirm.subject=Payment confirmation
 email.payment_confirm.content=Hello {0}! Your payment of {1} zł has been confirmed.
 
 email.course_paid.subject=Course paid
-email.course_paid.content=Hello {0}! Once your payment of {1} zł has been approved, your course has been fully paid for.
+email.course_paid.content=Hello {0}! Once your payment of {1} zł has been approved/added, your course has been fully paid for.
 
 email.payment_reject.subject=Payment rejection
 email.payment_reject.content=Hello {0}! Your payment of {1} zł has been rejected.
+
+email.payment_add.subject=Payment added
+email.payment_add.content=Hello {0}! A payment of {1} zł has been added by the administrator.
+
 
