--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -30,7 +30,10 @@ email.payment_confirm.subject=Potwierdzenie płatności
 email.payment_confirm.content=Witaj {0}! Twoja płatność w wysokości {1} zł została potwierdzona.
 
 email.course_paid.subject=Opłacenie kursu
-email.course_paid.content=Witaj {0}! Po zatwierdzeniu płatności w wysokości {1} zł Twój kurs został w pełni opłacony.
+email.course_paid.content=Witaj {0}! Po zatwierdzeniu/dodaniu płatności w wysokości {1} zł, Twój kurs został w pełni opłacony.
 
 email.payment_reject.subject=Odrzucenie płatności
 email.payment_reject.content=Witaj {0}! Twoja płatność w wysokości {1} zł została odrzucona.
+
+email.payment_add.subject=Płatność dodana
+email.payment_add.content=Witaj {0}! Płatność w wysokości {1} zł została dodana przez administratora.
