Minor fixes after testing part 3

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,6 +39,6 @@ email.payment_add.subject=Payment added
 email.payment_add.content=Hello {0}! A payment of {1} zł has been added by the administrator.
 
 email.lesson_cancel.subject=Lesson cancelled
-email.lesson_cancel.content=Hello {0}! Your appointment that was scheduled to start at: {1} has been canceled by the trainee.
+email.lesson_cancel.content=Hello {0}! Your lesson that was scheduled to start at: {1} has been canceled.
 
 
