--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -38,5 +38,5 @@ email.payment_reject.content=Witaj {0}! Twoja płatność w wysokości {1} zł z
 email.payment_add.subject=Płatność dodana
 email.payment_add.content=Witaj {0}! Płatność w wysokości {1} zł została dodana przez administratora.
 
-email.lesson_cancel.subject=Lekcja anulowana
-email.lesson_cancel.content=Witaj {0}! Twoje spotkanie, które miało się rozpocząć: {1} zostało odwołana przez kursanta.
+email.lesson_cancel.subject=Zajęcia anulowane
+email.lesson_cancel.content=Witaj {0}! Twoje zajęcia, które miały się rozpocząć {1} zostały odwołane.
