--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -14,6 +14,10 @@
   "dialog.button.confirm": "confirm",
   "dialog.permanent.title": "Permanent data change",
   "dialog.permanent.message": "The change you are trying to make permanently modifies data. \n Are you sure?",
+  "dialog.update.token.title":"Token expiration",
+  "dialog.update.token.message":"Your token will expire in a while. If you want to still using the app, please ",
+  "dialog.update.token.refresh":"click here to refresh it",
+  "dialog.update.token.success": "Token refreshed successfully",
   "error.request.404": "Resource not found",
   "error.request.401.login": "Authorization error",
   "error.request.401.token": "Token expired",
