--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -15,9 +15,9 @@
   "dialog.permanent.title": "Trwała zmiana danych",
   "dialog.permanent.message": "Zmiana, którą próbujesz dokonać trwale modyfikuje dane. \n Jesteś tego pewny?",
   "dialog.update.token.title":"Wygaśnięcie tokenu",
-  "dialog.update.token.message":"Za chwilę Twój token wygaśnie. Jeśli chcesz nadal korzystać z aplikacji ",
-  "dialog.update.token.refresh":"kliknij tutaj, aby go odświeżyć",
-  "dialog.update.token.success": "Token został odnowiony pomyślnie",
+  "dialog.update.token.message":"Twój token za chwilę wygaśnie. Jeśli chcesz nadal korzystać z aplikacji ",
+  "dialog.update.token.refresh":"kliknij, aby go odświeżyć",
+  "dialog.update.token.success": "Token został pomyślnie odnowiony",
   "error.request.404": "Zasób nie został znaleziony",
   "error.request.401.login": "Błąd autoryzacji",
   "error.request.401.token": "Token wygasł",
